// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stack (Native) > renders a VStack 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <div
            aria-orientation="vertical"
            className="is_Stack _alignItems-flex-start _flexDirection-column _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _display-flex _justifyContent-flex-start"
            role="group"
            style={{}}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 1
            </div>
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 2
            </div>
          </div>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Stack (Native) > renders a horizontal stack 1`] = `
<span
  className=""
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <div
            aria-orientation="horizontal"
            className="is_Stack _alignItems-flex-start _flexDirection-row _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _display-flex _justifyContent-flex-start"
            role="group"
            style={{}}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 1
            </div>
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 2
            </div>
          </div>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Stack (Native) > renders a vertical stack by default 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <div
            aria-orientation="vertical"
            className="is_Stack _alignItems-flex-start _flexDirection-column _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _display-flex _justifyContent-flex-start"
            role="group"
            style={{}}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 1
            </div>
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 2
            </div>
          </div>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Stack (Native) > renders an HStack 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <div
            aria-orientation="horizontal"
            className="is_Stack _alignItems-flex-start _flexDirection-row _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _display-flex _justifyContent-flex-start"
            role="group"
            style={{}}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 1
            </div>
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 2
            </div>
          </div>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;

exports[`Stack (Native) > renders with a different gap 1`] = `
<span
  className="t_unmounted"
  style={
    {
      "display": "contents",
    }
  }
>
  <span
    className=" "
    style={
      {
        "display": "contents",
      }
    }
  >
    <span
      className=" t_dark is_Theme"
      style={
        {
          "color": "",
          "display": "contents",
        }
      }
    >
      <span
        className=" "
        style={
          {
            "display": "contents",
          }
        }
      >
        <span
          className="t_sub_theme t_dark is_Theme"
          style={
            {
              "color": "",
              "display": "contents",
            }
          }
        >
          <div
            aria-orientation="vertical"
            className="is_Stack _alignItems-flex-start _flexDirection-column _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _display-flex _justifyContent-flex-start"
            role="group"
            style={{}}
          >
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 1
            </div>
            <div
              className="css-text-146c3p1"
              dir="auto"
            >
              Item 2
            </div>
          </div>
        </span>
      </span>
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
      <div
        style={
          {
            "display": "contents",
          }
        }
      />
    </span>
  </span>
</span>
`;
